// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.ratingsservice.grpc";
option java_outer_classname = "RatingProto";
option objc_class_prefix = "Rating";

package rating;

// The greeting service definition.
service TopRating {
  // Sends a greeting
  rpc getTopRating (TopRatingRequest) returns (TopRatingReply) {}
}

// The request message containing the user's name.
message TopRatingRequest {
  string user_id = 1;
}

// The response message containing the greetings
message  Rating {
  string move_id = 1;
  int32 rate = 2;
}
message TopRatingReply {
  repeated Rating ratings = 1;
}
